Some debugging messages implemented